<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:ignore="AlwaysShowAction"
      tools:context="com.example.translatethis.main.discover.MainActivity">

    <item
        android:id="@+id/action_record"
        android:orderInCategory="100"
        android:title="@string/menu_title_record"
        app:showAsAction="always"
        android:icon="@drawable/ic_mic_dark"
        />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="200"
        android:title="@string/menu_title_record"
        app:showAsAction="always"
        android:icon="@drawable/ic_edit_dark"
        />

    <item
        android:id="@+id/action_translate"
        android:orderInCategory="300"
        android:title="@string/menu_title_translate"
        app:showAsAction="always"
        android:icon="@drawable/ic_translate_dark"
        />

    <item
        android:id="@+id/action_play"
        android:orderInCategory="400"
        android:title="@string/menu_title_play"
        app:showAsAction="always"
        android:icon="@drawable/ic_play_dark"
        />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="500"
        android:title="@string/menu_title_save"
        app:showAsAction="always"
        android:icon="@drawable/ic_save_dark"
        />

</menu>
